test/bad/generators/iterable01.px

func f(): Bool... def
    yield 0..1

f()
